...
        android:id="@+id/bottom_nav_artist"
        android:icon="@drawable/ic_artist"
        android:title="Artistas"
        android:contentDescription="Navegar a la sección de artistas" />

    <item
        android:id="@+id/bottom_nav_collector"
        android:icon="@drawable/ic_user"
        android:title="Coleccionistas"
        android:contentDescription="Navegar a la sección de coleccionistas" />

    <item
        android:id="@+id/bottom_nav_logout"
...
