...
        android:gravity="center"
        android:ellipsize="none"
        android:maxLines="2"
        android:importantForAccessibility="yes" />

    <Button
        android:id="@+id/button_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondaryGray"
        android:elevation="4dp"
...
